# mcprototool

./: Cargo.toml  README.md
src/: main.rs  server.rs
src/protocol/: encoding.rs  mod.rs  types.rs
src/protocol/configuration/: clientbound.rs  serverbound.rs
src/protocol/handshaking/: mod.rs  serverbound.rs
src/protocol/login/: clientbound.rs  serverbound.rs
src/protocol/play/: clientbound.rs  serverbound.rs
src/protocol/status/: clientbound.rs  mod.rs  serverbound.rs
