[package]
name = "mcprototool"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
bytes = "1.10.1"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
